# webnn-native

./: .gclient_previous_sync_commits  .gitignore  .gn  BUILD.gn  DEPS  NOTICE  README.md  webnn.json  webnn_wire.json
build_overrides/: build.gni  dawn.gni  gpgmm.gni  webnn.gni  webnn_features.gni
examples/: BUILD.gn  SampleUtils.cpp  SampleUtils.h
examples/LeNet/: LeNet.cpp  LeNet.h  Main.cpp  MnistUbyte.cpp  MnistUbyte.h  README.md
examples/LeNet/images/: 0.idx  2.idx  3.idx  4.idx  6.idx  7.idx  8.idx
examples/MobileNetV2/: Main.cpp  MobileNetV2.cpp  MobileNetV2.h  README.md
examples/ResNet/: Main.cpp  README.md  ResNet.cpp  ResNet.h
examples/SqueezeNet/: Main.cpp  README.md  SqueezeNet.cpp  SqueezeNet.h
examples/SuperResolution/: SuperResolution.cpp  SuperResolution.h
examples/images/idx/: 1.idx  5.idx  9.idx
include/webnn/: BUILD.gn  webnn.h  webnn_cpp.h  webnn_proc.h  webnn_proc_table.h  webnn_thread_dispatch_proc.h
include/webnn/native/: WebnnNative.h
include/webnn/wire/: Wire.h  WireClient.h  WireServer.h  webnn_wire_export.h
scripts/: standalone.gclient  webnn_overrides_with_defaults.gni
src/common/: BUILD.gn
src/tests/: BUILD.gn  End2EndTestsMain.cpp  UnittestsMain.cpp  WebnnTest.cpp  WebnnTest.h
src/tests/end2end/: AddTests.cpp  BatchNormTests.cpp  ClampTests.cpp  ConcatTests.cpp  Conv2dTests.cpp  ConvTranspose2dTests.cpp  DeviceSelectionTests.cpp  DivTests.cpp  ElementWiseUnaryTests.cpp  GemmTests.cpp  GruTests.cpp  HardSwishTests.cpp  InstanceNormTests.cpp  LeakyReluTests.cpp  MatMulTests.cpp  MaxTests.cpp  MinTests.cpp  MulTests.cpp  PadTests.cpp  Pool2dTests.cpp  PowTests.cpp  ReduceMeanTests.cpp  ReduceTests.cpp  ReluTests.cpp  Resample2dTests.cpp  ResampleTests.cpp  ReshapeTests.cpp  SigmoidTests.cpp  SliceTests.cpp  SoftmaxTests.cpp  SplitTests.cpp  SqueezeTests.cpp  SubTests.cpp  TanhTests.cpp  TransposeTests.cpp
src/tests/end2end/models/: ResNetNchw.cpp  (+6 more)
src/tests/unittests/: ErrorTests.cpp  ObjectBaseTests.cpp
src/utils/: BUILD.gn  TerribleCommandBuffer.cpp  TerribleCommandBuffer.h
src/webnn/: BUILD.gn
src/webnn/common/: BUILD.gn
src/webnn/native/: BUILD.gn  BackendConnection.cpp  BackendConnection.h  Context.cpp  Context.h  Error.cpp  Error.h  ErrorData.cpp  ErrorData.h  ErrorScope.cpp  ErrorScope.h  Forward.h  FusionOperator.h  Graph.cpp  Graph.h  GraphBuilder.cpp  GraphBuilder.h  Instance.cpp  Instance.h  NamedInputs.h  NamedOperands.h  NamedOutputs.h  ObjectBase.cpp  ObjectBase.h  Operand.cpp  Operand.h  OperandArray.h  Operator.cpp  Operator.h  OperatorArray.h  Utils.cpp  Utils.h  WebnnNative.cpp  webnn_platform.h
src/webnn/tests/: BUILD.gn  End2EndTestsMain.cpp  WebnnTest.cpp
src/webnn/utils/: BUILD.gn  TerribleCommandBuffer.cpp  TerribleCommandBuffer.h
src/webnn/wire/: BUILD.gn  BufferConsumer.h  BufferConsumer_impl.h  ChunkedCommandHandler.cpp  ChunkedCommandHandler.h  ChunkedCommandSerializer.cpp  ChunkedCommandSerializer.h  Wire.cpp  WireClient.cpp  WireDeserializeAllocator.cpp  WireDeserializeAllocator.h  WireResult.h  WireServer.cpp
src/webnn_native/: BUILD.gn  BackendConnection.cpp  BackendConnection.h  Compilation.cpp  Compilation.h  Context.cpp  Context.h  Error.cpp  Error.h  ErrorData.cpp  ErrorData.h  ErrorScope.cpp  ErrorScope.h  Forward.h  FusionOperator.h  Graph.cpp  Graph.h  GraphBuilder.cpp  GraphBuilder.h  Instance.cpp  Instance.h  Model.cpp  Model.h  ModelBuilder.cpp  ModelBuilder.h  NamedInputs.h  NamedOperands.h  NamedOutputs.h  NamedRecords.h  NamedResults.h  NativeUtils.cpp  NativeUtils.h  NeuralNetworkContext.cpp  NeuralNetworkContext.h  ObjectBase.cpp  ObjectBase.h  Operand.cpp  Operand.h  OperandArray.h  Operator.cpp  (+8 more)
src/webnn_native/dml/: BackendDML.cpp  BackendDML.h  CompilationDML.cpp  CompilationDML.h  ContextDML.cpp  ContextDML.h  DMLUtils.cpp  DMLUtils.h  GraphDML.cpp  GraphDML.h  ModelBuilderDML.cpp  ModelBuilderDML.h  ModelDML.cpp  ModelDML.h  NeuralNetworkContextDML.cpp  NeuralNetworkContextDML.h
src/webnn_native/mlas/: BackendMLAS.cpp  BackendMLAS.h  ContextMLAS.cpp  ContextMLAS.h  GraphMLAS.cpp  GraphMLAS.h
src/webnn_native/null/: ContextNull.cpp  ContextNull.h  NeuralNetworkContextNull.cpp  NeuralNetworkContextNull.h
src/webnn_native/onednn/: BackendDNNL.cpp  BackendDNNL.h  ContextDNNL.cpp  ContextDNNL.h  GraphDNNL.cpp  GraphDNNL.h
src/webnn_native/openvino/: BackendIE.cpp  BackendIE.h  CompilationIE.cpp  CompilationIE.h  ContextIE.cpp  ContextIE.h  ErrorIE.cpp  ErrorIE.h  GraphIE.cpp  GraphIE.h  ModelBuilderIE.cpp  ModelBuilderIE.h  ModelIE.cpp  ModelIE.h  NeuralNetworkContextIE.cpp  NeuralNetworkContextIE.h
src/webnn_native/ops/: BatchNorm.cpp  BatchNorm.h  Binary.cpp  Binary.h  Clamp.cpp  Clamp.h  ClampOperator.cpp  ClampOperator.h  Concat.cpp  Concat.h  Constant.cpp  Constant.h  Conv2d.cpp  Conv2d.h  ConvTranspose2d.cpp  Gemm.cpp  Gemm.h  Gru.cpp  Gru.h  Input.cpp  Input.h  InstanceNorm.cpp  InstanceNorm.h  LeakyRelu.cpp  LeakyRelu.h  LeakyReluOperator.cpp  LeakyReluOperator.h  Pad.cpp  Pad.h  Pool2d.cpp  Pool2d.h  Reduce.cpp  Reduce.h  ReduceMean.cpp  ReduceMean.h  ReluOperator.cpp  ReluOperator.h  Resample.cpp  Resample.h  Resample2d.cpp  (+12 more)
src/webnn_native/xnnpack/: BackendXNN.cpp  BackendXNN.h  ContextXNN.cpp  ContextXNN.h  GraphXNN.cpp  GraphXNN.h
src/webnn_wire/: BUILD.gn  ChunkedCommandHandler.cpp  ChunkedCommandHandler.h  ChunkedCommandSerializer.cpp  ChunkedCommandSerializer.h  WireClient.cpp  WireDeserializeAllocator.cpp  WireDeserializeAllocator.h  WireServer.cpp
src/webnn_wire/client/: ApiObjects.h  Client.cpp  Client.h  ClientDoers.cpp  Context.cpp  Context.h  Graph.cpp  Graph.h  GraphBuilder.cpp  GraphBuilder.h  Instance.cpp  Instance.h  NamedInputs.cpp  NamedInputs.h  NamedOutputs.cpp  NamedOutputs.h  ObjectAllocator.h  ObjectBase.h  OperandArray.cpp  OperandArray.h  OperatorArray.cpp  OperatorArray.h
src/webnn_wire/server/: ObjectStorage.h  Server.cpp  Server.h  ServerContext.cpp  ServerGraph.cpp  ServerGraphBuilder.cpp  ServerInstance.cpp  ServerNamedInputs.cpp  ServerNamedOutputs.cpp  ServerOperandArray.cpp  ServerOperatorArray.cpp
(+404 files in other folders)
