# Copyright 2021 The WebNN-native Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# These are variables that are overridden by projects that include GPGMM.
# The values in this file are the defaults for when we are building GPGMM
# from WebNN-native's repository.

# The paths to GPGMM's dependencies
#
# This file is intentionally empty because WebNN-native uses non-standalone
# GPGMM and non-standalone GPGMM has no dependencies to override but GN
# must import a gpgmm.gni file to build without overrides.
