# Copyright 2021 The WebNN-native Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

webnn_standalone = true

# The paths to WebNN's dependencies
webnn_abseil_dir = "//third_party/abseil-cpp"
dawn_root = "//third_party/dawn"
webnn_googletest_dir = "//third_party/googletest"
webnn_jinja2_dir = "//third_party/jinja2"
webnn_gpgmm_dir = "//third_party/gpgmm"
