declare_args() {
  # Enables the compilation of OpenVINO Inference Engine backend
  webnn_enable_openvino = false

  # Enables the compilation of DirectML backend
  webnn_enable_dml = false

  # Enables the compilation of WebNN's Null backend
  # (required for unittests, obviously non-conformant)
  webnn_enable_null = true
}
