# Copyright 2021 The WebNN-native Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build_overrides/webnn.gni")

if (!defined(webnn_standalone)) {
  webnn_standalone = false
}

if (!defined(dawn_root)) {
  dawn_root = "//third_party/dawn"
}

if (!defined(webnn_jinja2_dir)) {
  webnn_jinja2_dir = "//third_party/jinja2"
}

if (!defined(webnn_root)) {
  webnn_root = get_path_info("..", "abspath")
}
webnn_gen_root = get_path_info("${webnn_root}", "gen_dir")

if (!defined(webnn_googletest_dir)) {
  webnn_googletest_dir = "//third_party/googletest"
}

if (!defined(webnn_abseil_dir)) {
  webnn_abseil_dir = "//third_party/abseil-cpp"
}
