# Copyright 2020 The Dawn Authors
# Copyright 2021 The WebNN-native Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../scripts/webnn_overrides_with_defaults.gni")

import("${webnn_dawn_root}/scripts/dawn_features.gni")
import("${webnn_root}/build_overrides/webnn_features.gni")

###############################################################################
# Utils for tests and samples
###############################################################################

static_library("webnn_utils") {
  configs += [ "${webnn_root}/src/common:dawn_internal" ]

  sources = [
    "TerribleCommandBuffer.cpp",
    "TerribleCommandBuffer.h",
  ]
  deps = [ "${webnn_root}/src/common" ]
  libs = []
  frameworks = []

  public_deps = [ "${webnn_root}/src/webnn:webnncpp_headers" ]
}
